--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pozole.html">Pozole</a>
+        <div><img src="https://i.chzbgr.com/full/8182891008/h3F5D3BF8/hunger-is-a-force" alt="Patrick Eating like a vaccum"></div>
+        <ul>
+        <li><a href="./recipes/pozole.html">Pozole</a></li>
+        <li><a href="./recipes/bongles.html">Bongles</a></li>
+        <li><a href="./recipes/dogo.html">Dogo</a></li>
+        </ul>
     </body>
 </html>
